Added utility method to check attachment files upload